last req notification settings, sidebar scrollbar fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -251,7 +251,6 @@ height: 100vh;
   -webkit-text-fill-color: transparent;
   color: transparent;
   background-size: 100% auto;
-  font-size: 30px;
 }
 
 .hero_content p {
